# SeaBattle

./: CMakeLists.txt  config.h  handlers.cpp  handlers.h  main.cpp  state_changers.cpp  state_changers.h  structs.h
common/handlers/: handlers.cpp  handlers.h
common/state_changers/: state_changers.cpp  state_changers.h
game/handlers/: handlers.cpp  handlers.h
game/state_changers/: state_changers.cpp  state_changers.h
handlers/: handlers.cpp  handlers.h
main/: config.h  main.cpp  structs.h
pregame/handlers/: handlers.cpp  handlers.h
pregame/state_changers/: state_changers.cpp  state_changers.h
resources/: main_menu.rc  resources.rc
state_changers/: state_changers.cpp  state_changers.h
